--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ install:
   - git clone --depth 1 --branch v0.6.2 git://git.kernel.org/pub/scm/devel/sparse/sparse.git
   - BINDIR=$PWD/bin make -C sparse install
   - export PATH=$PWD/bin:$PATH
+  - nproc # should be 2 according to https://docs.travis-ci.com/user/reference/overview/#virtualization-environments
 
 jobs:
   include:
@@ -56,12 +57,13 @@ jobs:
     - name: "BUILD GCC9 SOF Kernel x86_64"
       script:
         - export ARCH=x86_64 KCFLAGS="-Wall -Werror"
+        - export MAKEFLAGS=j"$(nproc)"
         - bash kconfig/kconfig-sof-default.sh
         - make modules_prepare
-        - make -j`getconf _NPROCESSORS_ONLN` sound/ W=1
-        - make -j`getconf _NPROCESSORS_ONLN` drivers/soundwire/ W=1
-        - make -j`getconf _NPROCESSORS_ONLN`
-        - make -j`getconf _NPROCESSORS_ONLN` bindeb-pkg
+        - make sound/ W=1
+        - make drivers/soundwire/ W=1
+        - make
+        - make bindeb-pkg
     - name: "BUILD GCC9 SST Kernel x86_64"
       script:
         - export ARCH=x86_64
@@ -70,11 +72,12 @@ jobs:
     - name: "BUILD GCC9 SOF Kernel i386"
       script:
         - export ARCH=i386 KCFLAGS="-Wall -Werror"
+        - export MAKEFLAGS=j"$(nproc)"
         - bash kconfig/kconfig-sof-default.sh
         - make modules_prepare
-        - make -j`getconf _NPROCESSORS_ONLN` sound/
-        - make -j`getconf _NPROCESSORS_ONLN` drivers/soundwire/
-        - make -j`getconf _NPROCESSORS_ONLN`
+        - make sound/
+        - make drivers/soundwire/
+        - make
     - name: "BUILD GCC9 SOF Kernel arm64"
       script:
         - export ARCH=arm64 CROSS_COMPILE=/usr/bin/aarch64-linux-gnu-
