--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,8 @@ git:
   depth: 20
 
 before_install:
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
-  - sudo apt-get install -y python-ply python-git libelf-dev codespell fakeroot gcc-9 g++-9 gcc-aarch64-linux-gnu
-  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 90 --slave /usr/bin/g++ g++ /usr/bin/g++-9
+  - sudo apt-get install -y python-ply python-git libelf-dev codespell fakeroot gcc g++ gcc-aarch64-linux-gnu
   - sudo apt-get install -y xz-utils lftp
 
 install:
